--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@supabase/supabase-js": "^2.42.5",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "multer": "^1.4.5-lts.1",
